vlib/v/checker/tests/invalid_op_ptr_err.vv
num := 10
p := &num
x := 5 * p
y := 5 / p
dump(x)
dump(p)
dump(y)
